# cursor_hack_tribev2

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
scripts/: demo_synthetic.py
src/digital_empathy/: __init__.py  __main__.py  brain_regions.py  inference.py  scoring.py  server.py  visualization.py
tests/: conftest.py  test_scoring.py
